Fix Formatting issue, Change font size of .site-header-tab. Some pages (burger.html, about.html's header div was never closed, meaning the entire page was wrapped within the first line. .site-header-tab font-size default -> 26

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ li {
 
 .site-header-tab {
   margin-left: 20px;
+  font-size: 26px;
 }
 
 #github-link {
